--- a/index.html
+++ b/index.html
@@ -42,25 +42,25 @@ h2{font-family: "Tiny5", sans-serif}
       <img src="antismash_GO/antismash_GO.png" alt="antismash_GO" style="width:100%">
       <h3>AntiSmash</h3>
       <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-      <a href="antismash_GO.html" class="w3-bar-item w3-button w3-hover-black">Play now!</a>
+      <a href="antismash_GO/antismash_GO.html" class="w3-bar-item w3-button w3-hover-black">Play now!</a>
     </div>
     <div class="w3-quarter">
         <img src="antismash_GO/antismash_GO.png" alt="antismash_GO" style="width:100%">
         <h3>AntiSmash</h3>
         <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-        <a href="antismash_GO.html" class="w3-bar-item w3-button w3-hover-black">Play now!</a>
+        <a href="antismash_GO/antismash_GO.html" class="w3-bar-item w3-button w3-hover-black">Play now!</a>
       </div>
     <div class="w3-quarter">
         <img src="antismash_GO/antismash_GO.png" alt="antismash_GO" style="width:100%">
         <h3>AntiSmash</h3>
         <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-        <a href="antismash_GO.html" class="w3-bar-item w3-button w3-hover-black">Play now!</a>
+        <a href="antismash_GO/antismash_GO.html" class="w3-bar-item w3-button w3-hover-black">Play now!</a>
       </div>
       <div class="w3-quarter">
         <img src="antismash_GO/antismash_GO.png" alt="antismash_GO" style="width:100%">
         <h3>AntiSmash</h3>
         <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-        <a href="antismash_GO.html" class="w3-bar-item w3-button w3-hover-black">Play now!</a>
+        <a href="antismash_GO/antismash_GO.html" class="w3-bar-item w3-button w3-hover-black">Play now!</a>
       </div>
   </div>
   
