--- a/antismash_GO/antismash_GO.html
+++ b/antismash_GO/antismash_GO.html
@@ -132,7 +132,7 @@
 
         <!-- Builtin injector for injecting google analytics code -->
         <footer class="w3-row-padding w3-padding-32">
-            <a href="../index.html" class="w3-bar-item w3-button w3-hover-black">Back to Homepage</a>
+            <a href="/index.html" class="w3-bar-item w3-button w3-hover-black">Back to Homepage</a>
         </footer>
     </body>
 
