--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@ h2{font-family: "Tiny5", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center" id="food">
     <div class="w3-quarter">
+      <img src="antismash_KW/antismash_KW.png" alt="antismash_GO" style="width:100%">
+      <h3>Anti-Smash remix</h3>
+      <p>Move the blocks with WASD and press R to restart.</p>
+      <a href="antismash_KW/antismash_KW.html" class="w3-bar-item w3-button w3-hover-black">Play now!</a>
+    </div>
+    <div class="w3-quarter">
       <img src="fishinspace_EB/fishinspace_EB.png" alt="antismash_GO" style="width:100%">
       <h3>Fish in Space</h3>
       <p>Fly your fish through space while avoiding pink blobs and rocks!</p>
       <a href="fishinspace_EB/fishinspace_EB.html" class="w3-bar-item w3-button w3-hover-black">Play now!</a>
     </div>
-    <div class="w3-quarter">
-        <img src="antismash_GO/antismash_GO.png" alt="antismash_GO" style="width:100%">
-        <h3>AntiSmash</h3>
-        <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-        <a href="antismash_GO/antismash_GO.html" class="w3-bar-item w3-button w3-hover-black">Play now!</a>
-      </div>
     <div class="w3-quarter">
         <img src="antismash_GO/antismash_GO.png" alt="antismash_GO" style="width:100%">
         <h3>AntiSmash</h3>
