--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ h2{font-family: "Tiny5", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding w3-padding-16 w3-center" id="food">
     <div class="w3-quarter">
-      <img src="antismash_KW/antismash_KW.png" alt="antismash_GO" style="width:100%">
+      <img src="antismash_KW/antismash_KW.png" alt="antismash_KW" style="width:100%">
       <h3>Anti-Smash remix</h3>
       <p>Move the blocks with WASD and press R to restart.</p>
       <a href="antismash_KW/antismash_KW.html" class="w3-bar-item w3-button w3-hover-black">Play now!</a>
