--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ h2{font-family: "Tiny5", sans-serif}
       <p>Fly your fish through space while avoiding pink blobs and rocks!</p>
       <a href="fishinspace_EB/fishinspace_EB.html" class="w3-bar-item w3-button w3-hover-black">Play now!</a>
     </div>
-    <div class="w3-quarter">
+    <!-- <div class="w3-quarter">
         <img src="antismash_GO/antismash_GO.png" alt="antismash_GO" style="width:100%">
         <h3>AntiSmash</h3>
         <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
@@ -61,7 +61,7 @@ h2{font-family: "Tiny5", sans-serif}
         <h3>AntiSmash</h3>
         <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
         <a href="antismash_GO/antismash_GO.html" class="w3-bar-item w3-button w3-hover-black">Play now!</a>
-      </div>
+      </div> -->
   </div>
   
 </div>
