--- a/antismash_KW/antismash_KW.html
+++ b/antismash_KW/antismash_KW.html
@@ -108,6 +108,7 @@
             <div class="w3-padding-32">
                 <h1>Anti-Smash Remix</h1>
                 <p>By K.Winn.</p>
+                <p>Move the blocks with WASD and press R to restart.</p>
            </div>
          </div>
         
