--- a/fishinspace_EB/fishinspace_EB.html
+++ b/fishinspace_EB/fishinspace_EB.html
@@ -108,6 +108,7 @@
             <div class="w3-padding-32">
                 <h1>Fish in Space</h1>
                 <p>By Everette</p>
+                <p>Fly your fish through space while avoiding pink blobs and rocks!</p>
            </div>
          </div>
         
