--- a/antismash_KW/antismash_KW.html
+++ b/antismash_KW/antismash_KW.html
@@ -45,10 +45,11 @@
                 margin: 0px;
                 padding: 0px;
                 border: 2px;
+                border-color: black;
             }
             :-webkit-full-screen #canvas {
-                width: 50%;
-                height: 50%;
+                width: 100%;
+                height: 100%;
             }
             :-webkit-full-screen {
                 width: 100%;
@@ -118,7 +119,7 @@
             
 
             <!-- Create the canvas element the game draws to -->
-            <canvas id="canvas" width="1000" height="1000" >
+            <canvas id="canvas" width="608" height="608" >
                 <p>Your browser doesn't support HTML5 canvas.</p>
             </canvas>
         </div>
