--- a/antismash_KW/antismash_KW.html
+++ b/antismash_KW/antismash_KW.html
@@ -44,8 +44,8 @@
                 touch-action: none;
                 margin: 0px;
                 padding: 0px;
-                border: 2px;
-                border-color: black;
+                border: 10px;
+                border-color: coral;
             }
             :-webkit-full-screen #canvas {
                 width: 100%;
