--- a/antismash_KW/antismash_KW.html
+++ b/antismash_KW/antismash_KW.html
@@ -44,7 +44,8 @@
                 touch-action: none;
                 margin: 0px;
                 padding: 0px;
-                border: 0px;
+                border-color: coral;
+                border: 5px;
                
             }
             :-webkit-full-screen #canvas {
@@ -60,8 +61,8 @@
             div.gm4html5_div_class {
                 margin: 0px;
                 padding: 0px;
-                border: 2px;
-                border-color: coral;
+                border: 50px;
+                border-color: black;
             }
             div.gm4html5_login {
                 padding: 20px;
