--- a/antismash_KW/antismash_KW.html
+++ b/antismash_KW/antismash_KW.html
@@ -121,7 +121,7 @@
             
 
             <!-- Create the canvas element the game draws to -->
-            <canvas id="canvas" width="1000" height="1000" >
+            <canvas id="canvas" width="1024" height="1024" style="position: absolute; top: 50%; left: 50%; bottom: -50%; right: -50%; transform: translate(-50%, -50%);" >
                 <p>Your browser doesn't support HTML5 canvas.</p>
             </canvas>
         </div>
