--- a/antismash_KW/antismash_KW.html
+++ b/antismash_KW/antismash_KW.html
@@ -51,6 +51,8 @@
             :-webkit-full-screen #canvas {
                 width: 100%;
                 height: 100%;
+                border: 50px;
+                border-color: black;
             }
             :-webkit-full-screen {
                 width: 100%;
