--- a/antismash_KW/antismash_KW.html
+++ b/antismash_KW/antismash_KW.html
@@ -116,6 +116,11 @@
                 <p>Move the blocks with WASD and press R to restart.</p>
            </div>
          </div>
+
+         <div class="w3-container w3-padding-32 w3-center">  
+            <div class="w3-padding-32">
+           </div>
+         </div>
         
         <div class="gm4html5_div_class" id="gm4html5_div_id" style = "text-align:center;">
             
