--- a/antismash_KW/antismash_KW.html
+++ b/antismash_KW/antismash_KW.html
@@ -128,7 +128,7 @@
         </div>
         
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/antismash.js?cachebust=1980491152"></script>
+        <script type="text/javascript" src="antismash_KW/html5game/antismash.js?cachebust=1980491152"></script>
 
         <!-- Builtin injector for injecting runner path -->
         
