--- a/antismash_KW/antismash_KW.html
+++ b/antismash_KW/antismash_KW.html
@@ -34,6 +34,7 @@
                 margin: 0px;
                 padding: 0px;
                 border: 0px;
+                overflow: hidden;
             }
 
             canvas {
@@ -43,6 +44,12 @@
                 touch-action: none;
                 margin: 0px;
                 padding: 0px;
+                  position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
                
             }
             :-webkit-full-screen #canvas {
