--- a/antismash_KW/antismash_KW.html
+++ b/antismash_KW/antismash_KW.html
@@ -44,8 +44,8 @@
             margin: 0px;
             padding: 0px;
             position: relative;
-            width: 100%;
-            height: 100%;
+            width: 50%;
+            height: auto;
             object-fit: contain;
         }
 
@@ -104,6 +104,11 @@
         </div>
     </div>
 
+    <div class="w3-container w3-padding-32 w3-center">
+        <div class="w3-padding-32">
+        </div>
+    </div>
+
     <div class="gm4html5_div_class" id="gm4html5_div_id">
         <canvas id="canvas" width="1024" height="1024">
             <p>Your browser doesn't support HTML5 canvas.</p>
@@ -111,7 +116,20 @@
     </div>
 
     <script type="text/javascript" src="html5game/antismash.js?cachebust=1980491152"></script>
-    <script>window.onload = GameMaker_Init;</script>
+    <script>
+        function resizeCanvas() {
+            const canvas = document.getElementById('canvas');
+            const aspectRatio = canvas.width / canvas.height;
+            canvas.style.height = (canvas.offsetWidth / aspectRatio) + 'px';
+        }
+
+        window.onload = function() {
+            GameMaker_Init();
+            resizeCanvas();
+        };
+
+        window.onresize = resizeCanvas;
+    </script>
 
     <footer class="w3-row-padding w3-padding-32">
         <a href="../index.html" class="w3-bar-item w3-button w3-hover-black">Back to Homepage</a>
