--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ h2{font-family: "Tiny5", sans-serif}
       <img src="fishinspace_EB/fishinspace_EB.png" alt="tetris_JP" style="width:100%">
       <h3>Tetris</h3>
       <p>Build 1 of Tetris, No death system or speed up; press E to reset all. Left arrow/A -morr horizontal left | Right arrow/D - more horizontally right | Down arrow/S - more fast downwards | up arrow/R - rotate</p>
-      <a href="fishinspace_EB/fishinspace_EB.html" class="w3-bar-item w3-button w3-hover-black">Play now!</a>
+      <a href="tetris_JP/tetris_JP.html" class="w3-bar-item w3-button w3-hover-black">Play now!</a>
     </div>
     <div class="w3-quarter">
       <img src="antismash_KW/antismash_KW.png" alt="antismash_KW" style="width:100%">
