--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ h2{font-family: "Tiny5", sans-serif}
     <div class="w3-quarter">
       <img src="spacerocks_NU/spacerocks_NU.png" alt="tetris_JP" style="width:100%">
       <h3>Survivor: Asteroids</h3>
-      <p></p>
+      <p>Your ship follows your mouse and moves with WASD. Tap to shoot quickly or hold to charge the laser with left mouse. Use bombs with right mouse or hold to start timer early. Press space to dash through rocks.</p>
       <a href="spacerocks_NU/spacerocks_NU.html" class="w3-bar-item w3-button w3-hover-black">Play now!</a>
     </div>
     <div class="w3-quarter">
