--- a/spacerocks_NU/spacerocks_NU.html
+++ b/spacerocks_NU/spacerocks_NU.html
@@ -100,12 +100,12 @@
         <div class="w3-padding-32">
             <h1>Survivor: Asteroids</h1>
             <p>By NU</p>
-            
+            <p>Your ship follows your mouse and moves with WASD. Tap to shoot quickly or hold to charge the laser with left mouse. Use bombs with right mouse or hold to start timer early. Press space to dash through rocks.</p>
         </div>
     </div>
     
     <div class="gm4html5_div_class" id="gm4html5_div_id">
-       <canvas id="canvas" width="2000" height="2000" >
+        <canvas id="canvas" width="2000" height="2000" >
             <p>Your browser doesn't support HTML5 canvas.</p>
         </canvas>
     </div>
