--- a/tetris_JP/tetris_JP.html
+++ b/tetris_JP/tetris_JP.html
@@ -100,7 +100,8 @@
         <div class="w3-padding-32">
             <h1>Tetris</h1>
             <p>By JP</p>
-            <p>Build 1 of Tetris, No death system or speed up; press E to reset all. Left arrow/A -morr horizontal left | Right arrow/D - more horizontally right | Down arrow/S - more fast downwards | up arrow/R - rotate</p>
+            <p>Build 1 of Tetris, No death system or speed up.</p>
+            <p>Controls: Press E to reset all. Left arrow/A - move horizontal left | Right arrow/D - move horizontally right | Down arrow/S - more fast downwards | up arrow/R - rotate</p>
         </div>
     </div>
     
