--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ h2{font-family: "Tiny5", sans-serif}
       <a href="spacerocks_NU/spacerocks_NU.html" class="w3-bar-item w3-button w3-hover-black">Play now!</a>
     </div>
     <div class="w3-quarter">
-      <img src="fishinspace_EB/fishinspace_EB.png" alt="tetris_JP" style="width:100%">
+      <img src="tetris_JP/tetris_JP.png" alt="tetris_JP" style="width:100%">
       <h3>Tetris</h3>
       <p>Build 1 of Tetris, No death system or speed up.</p>
       <a href="tetris_JP/tetris_JP.html" class="w3-bar-item w3-button w3-hover-black">Play now!</a>
