--- a/antismash_KW/antismash_KW.html
+++ b/antismash_KW/antismash_KW.html
@@ -30,6 +30,7 @@
         }
         
         body {
+            color: #000000;
             margin: 0px;
             padding: 0px;
             border: 0px;
